# 0.4.6.0

- Deprecated Control.Foldl.Transduce.ByteString.IO 
- Added "paragraphs" splitter.

# 0.4.5.0

- added split

# 0.4.4.0

- deprecated quiesceWith
- added Fallible.

# 0.4.3.0

- deprecated splitWhen in favor of break
- deprecated textualSplitWhen in favor of textualBreak

# 0.4.2.0

- Added "trip" fold.
- Added Control.Foldl.Transduce.Textual.

# 0.4.1.0

- Added module Control.Foldl.Transduce.ByteString.IO, to
  avoid having to depend on other packages for simple I/O tasks.
- Added "unit" fold.

# 0.4.0.0

- Changed order of parameters for groups' and groupsM'. Hopefully the new one
  is clearer.
- It was annoying to use "evenly (transduce ...)" every time. Added new
  ToTransductions' typeclass for types that can be converted to an infinite
  list of transductions.
- Added ToFold typeclass as well.

# 0.3.0.0

- Transducers can now delimit segments in the done function, too.
  This was required for transducers like surround to work as splitters.
- Strengthened the constraints on the surround function to Traversable.
- Added dependency on free and monoid-subclasses.
- group functions can now treat each group differently.
- Added ignore, splitAt, splitWhen, splitLast
- removed drop, take... use splitAt, splitWhen + bisect.
- Added bisect, evenly convenience functions.

# 0.2.1.0

- Comonad and Extend instances for Transducer 
- Added words splitter
- Added take, drop, takeWhile, dropWhile transducers

# 0.2.0.0

- Removed the Spliiter type. Now it's transducers for everything!
- generalizeTransducer -> _generalize
- simplifyTransducer -> _simplify
- removed chokepoint and chokepointM


# 0.1.2.0

- Added explicit bifunctors dependency.
- Added Transduce', TransduceM' type synonyms.
- Added groups', groupsM'.


# 0.1.1.0

- Changed signatures of transduce' and transduceM'.
- generalize' -> generalizeTransducer
- simplify' -> simplifyTransducer
- dropped direct profunctors dependency.