@@ -8,21 +8,21 @@ module Main (
         main
     ) where
 
-import Prelude hiding (words,lines,paragraphs)
+import Prelude hiding (words,lines)
 
 import qualified "text" Data.Text as T
 
 import qualified "foldl" Control.Foldl as L
 import "foldl-transduce" Control.Foldl.Transduce
-import "foldl-transduce" Control.Foldl.Transduce.Text (utf8lenient,words,lines,textualSplit)
+import "foldl-transduce" Control.Foldl.Transduce.Text (utf8lenient,words,lines,paragraphs,textualSplit)
 import "foldl-transduce" Control.Foldl.Transduce.ByteString (drainHandle,chunkSizeDefault)
 
 import System.IO
 import System.Environment (getArgs)
 
-multicount :: Fold T.Text (Int,Int,Int,Int)
+multicount :: Fold T.Text (Int,Int,Int,Int,Int)
 multicount = 
-    (,,,) <$> countchars <*> countwords <*> countlines <*> countsentences <*> countparagraps
+    (,,,,) <$> countchars <*> countwords <*> countlines <*> countsentences <*> countparagraps
   where
     countchars = L.premap T.length L.sum
     countwords = folds words unit L.length
